# open-introspection

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  health_check.py  main.py  prelim_results.ipynb  pyproject.toml
concept-vectors/: README.md  compute_concept_vectors.py  concept_vector_diagnostics.ipynb  concept_vectors.py  demo_concept_vector.ipynb  prompts.py
config/: default.yaml  trial.yaml
config/models/: gemma-4b.yaml  llama-70b.yaml  llama-8b.yaml  qwen-32b.yaml
data/: VECTORS.md  concepts.txt  sentences.txt
data/concepts/: simple_data.json
data/results/: README.md
data/stimuli/: baseline_words.txt
data/vectors/: README.md
intended-outputs/: README.md  full_70b.sbatch  intended_outputs_demo.ipynb  judge_results.py  prelim_results.ipynb  run_intended_outputs.py  smoke_8b.sbatch
introspection-data-visualizer/: index.html
logit-shift-eval/: analysis.py  config.py  plots.py  run_overnight.py  run_sweep.py
prefill-detection/: README.md  config.yaml  judge_results.py  plot_results.py  prefill_detection_demo.ipynb  prelim_results.ipynb  prompts.py  run_prefill_detection.py  test.py  tests.py  token_spans.py
research-sandbox-codex/: README.md
scripts/: analyze_results.py  extract_vectors.py  run_experiment.py
self-report-injected-thoughts/: README.md  generate.py  grade.py  grading.py  inject.py  prompt.py  run_bias_control_claude.py  run_trials.py  smoke_test.py
steering-eval/: EXPERIMENT_LOG.md  config.py  extract_vectors.py  level1_mcq.py  level2_generation.py  level3_likelihood.py  ndif_utils.py  plots.py  run_eval.py  stats.py  test_chunk.py  vectors.py
(+39 files in other folders)
