[project]
name = "open-introspection"
version = "1.0.0"
description = "Open-source replications of Anthropic's emergent introspective awareness experiments on Llama-3 via nnsight/NDIF."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.83.0",
    "huggingface-hub==1.4.0",
    "ipykernel==7.2.0",
    "jupyter==1.1.1",
    "matplotlib==3.10.8",
    "nnsight==0.6.2",
    "openai==2.20.0",
    "pandas==3.0.1",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "ruff==0.15.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "tenacity==9.1.4",
    "torch==2.10.0",
    "transformers==5.1.0",
]
